--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<head>
+    <title>The RotMG Drop Rate Farm!</title>
+    <link rel="stylesheet" type="text/css" href="home.css">
+    <script src="papaparse.min.js"></script>
+    <script src="index.js"></script>
+</head>
+
+<body onload="insertbuttons();">
+
+<h1>The RotMG Drop Rate Farm</h1>
+<p>Click one of the buttons below to navigate to a drop table.</p>
+
+<!-- buttons -->
+<div id="buttons"></div>
 </body>
 </html>
