--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <script src="index.js"></script>
 </head>
 
-<body onload="insertbuttons();">
-
-<h1>The RotMG Drop Rate Farm</h1>
-<p>Click one of the buttons below to navigate to a drop table.</p>
-
-<!-- buttons -->
-<div id="buttons"></div>
+<h1>GSIS IB Exam Information</h1>
+</hr>
 </body>
 </html>
