--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>The RotMG Drop Rate Farm!</title>
+    <title>GSIS IB Exam Information</title>
     <link rel="stylesheet" type="text/css" href="home.css">
     <script src="papaparse.min.js"></script>
     <script src="index.js"></script>
