--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GSIS IB Exam Information</title>
+    <title>My Projects</title>
     <link rel="stylesheet" type="text/css" href="home.css">
     <script src="papaparse.min.js"></script>
     <script src="index.js"></script>
 </head>
 
-<h1>GSIS IB Exam Information</h1>
+    <a url="https://www.youtube.com/watchmedomath"><button>YouTube Channel: WatchMeDoMath</button></a>
 </hr>
 </body>
 </html>
