--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <script src="papaparse.min.js"></script>
     <script src="index.js"></script>
 </head>
-
-    <a url="https://www.youtube.com/watchmedomath"><button>YouTube Channel: WatchMeDoMath</button></a>
+<body>
+<a url="https://www.youtube.com/watchmedomath"><button>YouTube Channel: WatchMeDoMath</button></a>
 </hr>
 </body>
 </html>
