--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-<a url="https://www.youtube.com/watchmedomath"><button>YouTube Channel: WatchMeDoMath</button></a>
+    <a url="https://www.youtube.com/watchmedomath"><button><h1>YouTube Channel: WatchMeDoMath</h1></button></a>
 </hr>
 <div class="tg-wrap"><table>
 <tbody>
