--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <title>My Projects</title>
     <link rel="stylesheet" type="text/css" href="home.css">
-    <script src="papaparse.min.js"></script>
-    <script src="index.js"></script>
 </head>
 <body>
     <a url="https://www.youtube.com/watchmedomath"><button><h1>YouTube Channel: WatchMeDoMath</h1></button></a>
+    <a "magdaplague.html"><button><h1>Magdalen College Covid</h1></button></a>
 </hr>
 </body>
 </html>
