--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <a url="https://www.youtube.com/watchmedomath"><button><h1>YouTube Channel: WatchMeDoMath</h1></button></a>
-    <a "magdaplague.html"><button><h1>Magdalen College Covid</h1></button></a>
+    <a url="magdaplague.html"><button><h1>Magdalen College Covid</h1></button></a>
 </hr>
 </body>
 </html>
