--- a/magdaplague.html
+++ b/magdaplague.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html> <!-- before anyone points this out, I know inside the HTML is a shit way to store data, I'm not taking this seriously -->
 <html>
-  <head></head>
+  <head>
+    <title>My Projects</title>
+    <link rel="stylesheet" type="text/css" href="home.css">
+  </head>
   <body>
   <p>Tracking the Magdalen freshers' Covid outbreak. The information on this page is just from the big group chat.
     Accumulated numbers only from 31-Jan since I'm too lazy to check back further. Let me know if you have scraped together that data.
