--- a/magdaplague.html
+++ b/magdaplague.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <p>Tracking the Magdalen freshers' Covid outbreak. The information on this page is just from the big group chat.
-    Accumulated numbers only from 31-Jan since I'm too lazy to check back further. Let me know if you have scraped together that data.</p>
+    Accumulated numbers only from 31-Jan since I'm too lazy to check back further. Let me know if you have scraped together that data. Let me know if you would like to be anonymised.</p>
   <table>
     <tr>
       <th>Date</th>
