--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 <body>
-    <a href="https://www.youtube.com/watchmedomath"><button><h1>YouTube Channel: WatchMeDoMath</h1></button></a>
-    <a href="magdaplague.html"><button><h1>Magdalen College Covid</h1></button></a>
+    <button onclick="window.location.href='https://www.youtube.com/watchmedomath';"><h1>YouTube Channel: WatchMeDoMath</h1></button>
+    <button onclick="window.location.href='magdaplague.html';"><h1>Magdalen College Covid</h1></button></a>
 </hr>
 </body>
 </html>
