--- a/magdaplague.html
+++ b/magdaplague.html
@@ -5,21 +5,54 @@
     <link rel="stylesheet" type="text/css" href="home.css">
   </head>
   <body>
-  <p>Tracking the Magdalen freshers' Covid outbreak. The information on this page is just from the big group chat.
-    Accumulated numbers only from 31-Jan since I'm too lazy to check back further. Let me know if you have scraped together that data. Let me know if you would like to be anonymised.</p>
-  <table>
-    <tr>
-      <th>Date</th>
-      <th>Cases (Initials)</th>
-      <th>Cases (New)</th>
-      <th>Cases (Accumulated)</th>
-    </tr>
-    <tr>
-      <td>31-Jan-2022</td>
-      <td>AV, IL, Ho, EH</td>
-      <td>4</td>
-      <td>4</td>
-    </tr>
-  </table>
+  <p>Tracking the Magdalen freshers' Covid outbreak. The information on this page tallies only those comfortable with saying on the big freshers' group chat that they tested positive, and so underrepresents actual case numbers.  Let me know if you would like to be anonymised.</p>
+    <table>
+<thead>
+  <tr>
+    <th>Date</th>
+    <th>Initials</th>
+    <th>Cases</th>
+    <th>Accumulated Cases</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>2022-01-31</td>
+    <td>AV, IL, Ho, EH</td>
+    <td>4</td>
+    <td>12</td>
+  </tr>
+  <tr>
+    <td>2022-01-30</td>
+    <td>MB</td>
+    <td>1</td>
+    <td>8</td>
+  </tr>
+  <tr>
+    <td>2022-01-26</td>
+    <td>Ve, CM</td>
+    <td>2</td>
+    <td>7</td>
+  </tr>
+  <tr>
+    <td>2022-01-25</td>
+    <td>VR</td>
+    <td>1</td>
+    <td>5</td>
+  </tr>
+  <tr>
+    <td>2022-01-23</td>
+    <td>JM, Ch, Ar</td>
+    <td>3</td>
+    <td>4</td>
+  </tr>
+  <tr>
+    <td>2022-01-14</td>
+    <td>MC</td>
+    <td>1</td>
+    <td>1</td>
+  </tr>
+</tbody>
+</table>
   </body>
 </html>
