--- a/magdaplague.html
+++ b/magdaplague.html
@@ -16,11 +16,11 @@
   </tr>
 </thead>
 <tbody>
-  <tr id='mostrecent'>
-    <td>2022-01-31</td>
-    <td>AV, IL, Ho, EH</td>
-    <td>4</td>
-    <td>12</td>
+  <tr>
+    <td id="mostrecent">2022-01-31</td>
+    <td id="mostrecent">AV, IL, Ho, EH</td>
+    <td id="mostrecent">4</td>
+    <td id="mostrecent">12</td>
   </tr>
   <tr>
     <td>2022-01-30</td>
