--- a/magdaplague.html
+++ b/magdaplague.html
@@ -17,10 +17,10 @@
 </thead>
 <tbody>
   <tr>
-    <td id="mostrecent">2022-01-31</td>
-    <td id="mostrecent">AV, IL, Ho, EH</td>
-    <td id="mostrecent">4</td>
-    <td id="mostrecent">12</td>
+    <td class="mostrecent">2022-01-31</td>
+    <td class="mostrecent">AV, IL, Ho, EH</td>
+    <td class="mostrecent">4</td>
+    <td class="mostrecent">12</td>
   </tr>
   <tr>
     <td>2022-01-30</td>
