--- a/magdaplague.html
+++ b/magdaplague.html
@@ -17,11 +17,16 @@
 </thead>
 <tbody>
   <tr>
-    <td class="mostrecent">2022-01-31</td>
-    <td class="mostrecent">AV, IL, Ho, EH</td>
-    <td class="mostrecent">4</td>
-    <td class="mostrecent">12</td>
+    <td class="mostrecent">2022-02-01</td>
+    <td class="mostrecent">LK, RP</td>
+    <td class="mostrecent">2</td>
+    <td class="mostrecent">14</td>
   </tr>
+  <tr>
+    <td>2022-01-31</td>
+    <td>AV, IL, Ho, EH</td>
+    <td>4</td>
+    <td>12</td>
   <tr>
     <td>2022-01-30</td>
     <td>MB</td>
