--- a/magdaplague.html
+++ b/magdaplague.html
@@ -17,10 +17,16 @@
 </thead>
 <tbody>
   <tr>
-    <td class="mostrecent">2022-02-01</td>
-    <td class="mostrecent">LK, RP</td>
+    <td class="mostrecent">2022-02-03</td>
+    <td class="mostrecent">Cl, Ev</td>
     <td class="mostrecent">2</td>
-    <td class="mostrecent">14</td>
+    <td class="mostrecent">16</td>
+  </tr>
+  <tr>
+    <td>2022-02-01</td>
+    <td>LK, RP</td>
+    <td>2</td>
+    <td>14</td>
   </tr>
   <tr>
     <td>2022-01-31</td>
