--- a/magdaplague.html
+++ b/magdaplague.html
@@ -17,10 +17,16 @@
 </thead>
 <tbody>
   <tr>
-    <td class="mostrecent">2022-02-03</td>
-    <td class="mostrecent">Cl, Ev</td>
-    <td class="mostrecent">2</td>
-    <td class="mostrecent">16</td>
+    <td class="mostrecent">2022-02-05</td>
+    <td class="mostrecent">Evi</td>
+    <td class="mostrecent">1</td>
+    <td class="mostrecent">17</td>
+  </tr>
+  <tr>
+    <td>2022-02-03</td>
+    <td>Cl, Eve</td>
+    <td>2</td>
+    <td>16</td>
   </tr>
   <tr>
     <td>2022-02-01</td>
