--- a/magdaplague.html
+++ b/magdaplague.html
@@ -17,10 +17,16 @@
 </thead>
 <tbody>
   <tr>
-    <td class="mostrecent">2022-02-05</td>
-    <td class="mostrecent">Evi</td>
+    <td class="mostrecent">2022-02-06</td>
+    <td class="mostrecent">Ca</td>
     <td class="mostrecent">1</td>
-    <td class="mostrecent">17</td>
+    <td class="mostrecent">18</td>
+  </tr>
+  <tr>
+    <td>2022-02-05</td>
+    <td>Evi</td>
+    <td>1</td>
+    <td>17</td>
   </tr>
   <tr>
     <td>2022-02-03</td>
