--- a/magdaplague.html
+++ b/magdaplague.html
@@ -17,10 +17,16 @@
 </thead>
 <tbody>
   <tr>
-    <td class="mostrecent">2022-02-06</td>
-    <td class="mostrecent">Ca</td>
+    <td class="mostrecent">2022-02-07</td>
+    <td class="mostrecent">DJ</td>
     <td class="mostrecent">1</td>
-    <td class="mostrecent">18</td>
+    <td class="mostrecent">21</td>
+  </tr>
+  <tr>
+    <td>2022-02-06</td>
+    <td>Ca, --, Ma</td>
+    <td>3</td>
+    <td>20</td>
   </tr>
   <tr>
     <td>2022-02-05</td>
