--- a/magdaplague.html
+++ b/magdaplague.html
@@ -17,10 +17,16 @@
 </thead>
 <tbody>
   <tr>
-    <td class="mostrecent">2022-02-07</td>
-    <td class="mostrecent">DJ</td>
+    <td class="mostrecent">2022-02-08</td>
+    <td class="mostrecent">TJ</td>
     <td class="mostrecent">1</td>
-    <td class="mostrecent">21</td>
+    <td class="mostrecent">22</td>
+  </tr>
+  <tr>
+    <td>2022-02-07</td>
+    <td>DJ</td>
+    <td>1</td>
+    <td>21</td>
   </tr>
   <tr>
     <td>2022-02-06</td>
