--- a/magdaplague.html
+++ b/magdaplague.html
@@ -17,10 +17,16 @@
 </thead>
 <tbody>
   <tr>
-    <td class="mostrecent">2022-02-08</td>
-    <td class="mostrecent">TJ</td>
-    <td class="mostrecent">1</td>
-    <td class="mostrecent">22</td>
+    <td class="mostrecent">2022-02-09</td>
+    <td class="mostrecent">Wi, GG</td>
+    <td class="mostrecent">2</td>
+    <td class="mostrecent">25</td>
+  </tr>
+  <tr>
+    <td>2022-02-08</td>
+    <td>TJ, Ol</td>
+    <td>2</td>
+    <td>23</td>
   </tr>
   <tr>
     <td>2022-02-07</td>
