--- a/magdaplague.html
+++ b/magdaplague.html
@@ -18,9 +18,9 @@
 <tbody>
   <tr>
     <td class="mostrecent">2022-02-09</td>
-    <td class="mostrecent">Wi, GG</td>
-    <td class="mostrecent">2</td>
-    <td class="mostrecent">25</td>
+    <td class="mostrecent">Wi, GG, ZR</td>
+    <td class="mostrecent">3</td>
+    <td class="mostrecent">26</td>
   </tr>
   <tr>
     <td>2022-02-08</td>
