--- a/magdaplague.html
+++ b/magdaplague.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- before anyone points this out, I know inside the HTML is a shit way to store data, I'm not taking this seriously -->
+<!DOCTYPE html> <!-- before anyone points this out, I know inside the raw HTML is a shit way to store data, I'm not taking this project seriously -->
 <html>
   <head>
     <title>Magdalen Covid</title>
@@ -18,9 +18,9 @@
 <tbody>
   <tr>
     <td class="mostrecent">2022-02-09</td>
-    <td class="mostrecent">Wi, GG, ZR</td>
-    <td class="mostrecent">3</td>
-    <td class="mostrecent">26</td>
+    <td class="mostrecent">Wi, GG, ZR, Me</td>
+    <td class="mostrecent">4</td>
+    <td class="mostrecent">27</td>
   </tr>
   <tr>
     <td>2022-02-08</td>
