--- a/magdaplague.html
+++ b/magdaplague.html
@@ -17,10 +17,22 @@
 </thead>
 <tbody>
   <tr>
-    <td class="mostrecent">2022-02-09</td>
-    <td class="mostrecent">Wi, GG, ZR, Me</td>
-    <td class="mostrecent">4</td>
-    <td class="mostrecent">27</td>
+    <td class="mostrecent">2022-02-11</td>
+    <td class="mostrecent">Ca, Joel</td>
+    <td class="mostrecent">2</td>
+    <td class="mostrecent">30</td>
+  </tr>
+  <tr>
+    <td>2022-02-10</td>
+    <td>Joe.</td>
+    <td>1</td>
+    <td>29</td>
+  </tr>
+  <tr>
+    <td>2022-02-09</td>
+    <td>Wi, GG, ZR, Me</td>
+    <td>4</td>
+    <td>27</td>
   </tr>
   <tr>
     <td>2022-02-08</td>
