--- a/magdaplague.html
+++ b/magdaplague.html
@@ -18,15 +18,15 @@
 <tbody>
   <tr>
     <td class="mostrecent">2022-02-11</td>
-    <td class="mostrecent">Ca, Joel</td>
-    <td class="mostrecent">2</td>
-    <td class="mostrecent">30</td>
+    <td class="mostrecent">Cai, Joel, DT, JG</td>
+    <td class="mostrecent">4</td>
+    <td class="mostrecent">32</td>
   </tr>
   <tr>
     <td>2022-02-10</td>
     <td>Joe.</td>
     <td>1</td>
-    <td>29</td>
+    <td>28</td>
   </tr>
   <tr>
     <td>2022-02-09</td>
@@ -48,7 +48,7 @@
   </tr>
   <tr>
     <td>2022-02-06</td>
-    <td>Ca, --, Ma</td>
+    <td>Cat, --, Ma</td>
     <td>3</td>
     <td>20</td>
   </tr>
