--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
     <button onclick="window.location.href='https://www.youtube.com/watchmedomath';"><h1>YouTube Channel: WatchMeDoMath</h1></button>
     <button onclick="window.location.href='magdaplague.html';"><h1>Magdalen College Covid</h1></button></a>
+    <button onclick="window.location.href='sphharqui20260216/index.html';"><h1>Spherical Harmonics Quiz</h1></button></a>
 </hr>
 </body>
 </html>
+
