--- a/Spherical Harmonics Quiz/index.html
+++ b/Spherical Harmonics Quiz/index.html
@@ -366,7 +366,7 @@
   <div class="container">
     <header>
       <h1>Spherical Harmonics Quiz</h1>
-      <p class="subtitle">Name all 16 spherical harmonics for ℓ = 0 to 3</p>
+      <p class="subtitle">Type in all 16 spherical harmonics for ℓ = 0 to 3</p>
     </header>
 
     <div class="controls">
